Added fixed headers, and last rows to all the table records

--- a/church1/AdminDashBoard/theme/chart-chartjs.html
+++ b/church1/AdminDashBoard/theme/chart-chartjs.html
@@ -64,7 +64,7 @@
             <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
               <a href="../../../church1/income-records.html">Income-Records</a>
-              <a href="../../../church1/expenditure-records.html">Expenses-Records</a>
+              <a href="../../../church1/local-expenditure-records.html">Local-Expenditure-Records</a>
               <a href="../../../church1/local-records.html">Local-Records</a>
               <a href="../../../church1/conference-records.html">Conference-Records</a>
               <a href="../../../church1/district-records.html">District-Records</a>
