--- a/church1/assest/datalist/income-datalist.html
+++ b/church1/assest/datalist/income-datalist.html
@@ -5,6 +5,7 @@
     <option value="Thanksgiving"></option>
     <option value="Children Offering"></option>
     <option value="Sabbath School"></option>
+    <option value="Fund Raising"></option>
 
 <!-- //All new income data would be added here -->
 </datalist>
