--- a/church1/assest/datalist/local-expenditure-datalist.html
+++ b/church1/assest/datalist/local-expenditure-datalist.html
@@ -4,4 +4,5 @@
     <option value="Local Transport"></option>
     <option value="Funeral"></option>
     <option value="Charity"></option>
+    <option value="Post office Bill"></option>
   </datalist>
