--- a/church1/conference-records.html
+++ b/church1/conference-records.html
@@ -13,6 +13,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="./assest/scripts/auth.js"></script> 
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.2.2/css/fixedColumns.dataTables.min.css">
+    <script src="https://cdn.datatables.net/fixedcolumns/4.2.2/js/dataTables.fixedColumns.min.js"></script>
 </head>
 <body>
     <nav>
@@ -47,7 +50,7 @@
             <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
               <a href="income-records.html">Income-Records</a>
-              <a href="expenditure-records.html">Expenses-Records</a>
+              <a href="local-expenditure-records.html">Local-Expenditure-Records</a>
               <a href="local-income-records.html">Local-Income-Records</a>
               <a class="active" href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
@@ -65,7 +68,7 @@
                 <i class="fa fa-spinner fa-spin"></i> Loading...
             </div>
         <div class="table-wrapper">
-            <table id="dataTable" class="table table-striped table-bordered">
+            <table id="dataTable5" class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>Num</th>
@@ -99,44 +102,6 @@
     <script src="./assest/scripts/script.js"></script>
 
     <script>
-  document.addEventListener('DOMContentLoaded', () => {
-  // Function to hide all empty columns in the table
-  function hideEmptyColumns(tableId) {
-    const table = document.getElementById(tableId);
-    const headers = table.querySelectorAll("thead th");
-    const rows = table.querySelectorAll("tbody tr");
-
-    if (!table || headers.length === 0 || rows.length === 0) {
-      console.warn(`Table with ID "${tableId}" is empty or not found.`);
-      return;
-    }
-    // Iterate through each column
-    headers.forEach((header, colIndex) => {
-      let isEmpty = true;
-    // Check if all cells in the column are empty
-      rows.forEach((row) => {
-        const cell = row.cells[colIndex];
-        if (cell && cell.textContent.trim() !== "") {
-          isEmpty = false; // If any cell has content, the column is not empty
-        }
-      });
-      // Hide the column if it is empty
-      if (isEmpty) {
-        // Hide the header
-        header.style.display = "none";
-        // Hide all cells in the column
-        rows.forEach((row) => {
-          const cell = row.cells[colIndex];
-          if (cell) {
-            cell.style.display = "none";
-          }
-        });
-      }
-    });
-  }
-// The code above is a function that hides empty columns in a table. It checks each column in the table and hides it if all cells in that column are empty. The function is called after the data is fetched and the table is populated.
-
-
         $(document).ready(function() {
             const webAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
 
@@ -164,13 +129,24 @@
                         `;
                         tableBody.appendChild(tr);
                     });
-                    $('#dataTable').DataTable({
-                        "order": [[ 0, "desc" ]], // Order by the first column (NUM) in descending order
-                        "pageLength": 10, // Set the number of rows per page
-                        "lengthMenu": [5, 10, 25, 50, 100, 200] // Options for number of rows per page
+                    // Call function to Hide empty columns function
+                    hideEmptyColumns("dataTable5");// Call the function to hide empty columns
+
+                    $('#dataTable5').DataTable({
+                        scrollX: true, // Enable horizontal scrolling
+                        scrollY: "60vh", // Enable vertical scrolling with a height of 60% of the viewport
+                        scrollCollapse: true, // Allow the table to shrink when fewer rows are displayed
+                        paging: true, // Enable pagination
+                        fixedColumns: {
+                            leftColumns: 1, // Freeze the first column (Date_Column)
+                            rightColumns: 1 // Freeze the last column (Total)
+                        },
+                        //fixedHeader: true, // Enable fixed headers
+                        order: [[0, "desc"]], // Order by the first column (NUM) in descending order
+                        pageLength: 10, // Set the number of rows per page
+                        lengthMenu: [5, 10, 25, 50, 100, 200] // Options for number of rows per page
                     });
 
-                    hideEmptyColumns("dataTable");// Call the function to hide empty columns
                 })
                 .catch(error => console.error('Error fetching data:', error))
                 .finally(() => {
@@ -180,7 +156,59 @@
            });
 
 
-});
+
+
+
+  // The code below is a function that hides empty columns in a table. 
+  // It checks each column in the table and hides it if all cells in that column are empty. 
+  // The function is called after the data is fetched and the table is populated.
+  function hideEmptyColumns(tableId) {
+  const table = document.getElementById(tableId);
+  const headers = table.querySelectorAll("thead th");
+  const rows = table.querySelectorAll("tbody tr");
+
+  if (!table || headers.length === 0 || rows.length === 0) {
+    console.warn(`Table with ID "${tableId}" is empty or not found.`);
+    return;
+  }
+
+  // Iterate through each column
+  headers.forEach((header, colIndex) => {
+    let isEmpty = true;
+
+    // Check if all cells in the column are empty
+    rows.forEach((row) => {
+      const cell = row.cells[colIndex];
+      if (cell && cell.textContent.trim() !== "") {
+        isEmpty = false; // If any cell has content, the column is not empty
+      }
+    });
+
+    // Hide the column if it is empty
+    if (isEmpty) {
+      // Hide the header
+      header.style.display = "none";
+
+      // Hide all cells in the column
+      rows.forEach((row) => {
+        const cell = row.cells[colIndex];
+        if (cell) {
+          cell.style.display = "none";
+        }
+      });
+    } else {
+      // Ensure the header and cells are visible if the column is not empty
+      header.style.display = ""; // Make the header visible
+      rows.forEach((row) => {
+        const cell = row.cells[colIndex];
+        if (cell) {
+          cell.style.display = ""; // Make the cell visible
+        }
+      });
+    }
+  });
+}
+
 
     </script>
 </body>
