--- a/church1/district-expenditure-book.html
+++ b/church1/district-expenditure-book.html
@@ -43,7 +43,7 @@
                 <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
                 <div class="dropdown-content">
                   <a href="income-records.html">Income-Records</a>
-                  <a href="expenditure-records.html">Expenses-Records</a>
+                  <a href="local-expenditure-records.html">Local-Expenditure-Records</a>
                   <a href="local-income-records.html">Local-Income-Records</a>
                   <a href="conference-records.html">Conference-Records</a>
                   <a href="district-records.html">District-Records</a>
@@ -284,6 +284,8 @@ if (duplicateParticulars.length > 0) {
         Swal.fire({
           title: "Done", text: "Saved Successfully.", icon: "success"
           });
+          // Clear the session storage
+          sessionStorage.removeItem("distExpenditureTableData");
           //reload the page after saving
           setTimeout(() => {
             location.reload();
