--- a/church1/income-book.html
+++ b/church1/income-book.html
@@ -43,7 +43,7 @@
             <a><i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
               <a href="income-records.html">Income-Records</a>
-              <a href="expenditure-records.html">Expenses-Records</a>
+              <a href="local-expenditure-records.html">Local-Expenditure-Records</a>
               <a href="local-income-records.html">Local-Income-Records</a>
               <a href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
@@ -144,7 +144,8 @@
     const totalIncomeScriptURL = "https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec";                     
     const conferenceScriptURL ="https://script.google.com/macros/s/AKfycbxCdDlJLrcq3qxlEcOW8oI73OJHXC-E3eOaapWiW4Qj9l6OHY8XO1cSK_oaqOWwx7fu9A/exec";
     const districtScriptURL="https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec";
-    const localDataScriptURL="https://script.google.com/macros/s/AKfycbxfRWuHaQ-lEvopSxkHOTXmeeWYAZ4TCx9NvUi3loXYmMjTfxq-D9VMIZY-KFOxDVNUGQ/exec";
+    // const localDataScriptURL="https://script.google.com/macros/s/AKfycbxfRWuHaQ-lEvopSxkHOTXmeeWYAZ4TCx9NvUi3loXYmMjTfxq-D9VMIZY-KFOxDVNUGQ/exec";
+    const localIncomeScriptURL= "https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec"
 
     const form = document.forms["incomeTableForm"];
     form.addEventListener("submit", (e) => {
@@ -360,7 +361,7 @@ const formData = new FormData(form);
     fetch(totalIncomeScriptURL, { method: "POST", body: formData }),
     fetch(conferenceScriptURL, { method: "POST", body: conferenceData }),
     fetch(districtScriptURL, { method: "POST", body: districtData }),
-    fetch(localDataScriptURL, { method: "POST", body: localData })
+    fetch(localIncomeScriptURL, { method: "POST", body: localData })
   ])
     .then((responses) => {
       // Check if all responses are successful
@@ -370,9 +371,9 @@ const formData = new FormData(form);
           text: "All records saved successfully!",
           icon: "success"
         }).then(() => {
-           // Clear localStorage after successful save
-           localStorage.removeItem("incomeTableData");
-
+           // Clear sessionStorage after successful save
+           sessionStorage.removeItem("incomeTableData");
+         
           // Trigger the Full View button click
           document.getElementById('fullBtn').click();
         });
