--- a/church1/local-expenditure-records.html
+++ b/church1/local-expenditure-records.html
@@ -17,9 +17,6 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.2.2/css/fixedColumns.dataTables.min.css">
     <script src="https://cdn.datatables.net/fixedcolumns/4.2.2/js/dataTables.fixedColumns.min.js"></script>
 
-    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.3.2/css/fixedHeader.dataTables.min.css">
-<script src="https://cdn.datatables.net/fixedheader/3.3.2/js/dataTables.fixedHeader.min.js"></script> -->
-
 </head>
 <body>
     <nav>
@@ -54,7 +51,7 @@
             <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
               <a href="income-records.html">Income-Records</a>
-              <a class="active" href="expenditure-records.html">Expenses-Records</a>
+              <a class="active" href="local-expenditure-records.html">Local-Expenditure-Records</a>
               <a href="local-income-records.html">Local-Income-Records</a>
               <a href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
@@ -65,14 +62,14 @@
       </nav>
       <br><br>
     <div class="container mt-5">
-    <h2 class="records-header" style="background-color:#90066b;">TOTAL EXPENDITURE RECORDS</h2>
+    <h2 class="records-header" style="background-color:#90066b;">LOCAL EXPENDITURE RECORDS</h2>
         <div class="table-responsive">
             <!-- Spinner -->
             <div id="spinner2" class="spinner2" style="display: none;">
                 <i class="fa fa-spinner fa-spin"></i> Loading...
             </div>
         <div class="table-wrapper">
-            <table id="dataTable" class="table table-striped table-bordered">
+            <table id="dataTable3" class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>Num</th>
@@ -80,9 +77,10 @@
                         <th>Date_Column</th>
                         <th>Utilities</th>
                         <th>Deaconery</th>
-                        <th>Local T & T</th>
+                        <th>Local Transport</th>
                         <th>Funeral</th>
                         <th>Charity</th>
+                        <th>Post Office Bill</th>
                         <th>Total</th>
                     </tr>
                 </thead>
@@ -102,45 +100,6 @@
     <script src="./assest/scripts/script.js"></script>
 
     <script>
-  document.addEventListener('DOMContentLoaded', () => {
-  // Function to hide all empty columns in the table
-  function hideEmptyColumns(tableId) {
-    const table = document.getElementById(tableId);
-    const headers = table.querySelectorAll("thead th");
-    const rows = table.querySelectorAll("tbody tr");
-
-    if (!table || headers.length === 0 || rows.length === 0) {
-      console.warn(`Table with ID "${tableId}" is empty or not found.`);
-      return;
-    }
-    // Iterate through each column
-    headers.forEach((header, colIndex) => {
-      let isEmpty = true;
-    // Check if all cells in the column are empty
-      rows.forEach((row) => {
-        const cell = row.cells[colIndex];
-        if (cell && cell.textContent.trim() !== "") {
-          isEmpty = false; // If any cell has content, the column is not empty
-        }
-      });
-      // Hide the column if it is empty
-      if (isEmpty) {
-        // Hide the header
-        header.style.display = "none";
-        // Hide all cells in the column
-        rows.forEach((row) => {
-          const cell = row.cells[colIndex];
-          if (cell) {
-            cell.style.display = "none";
-          }
-        });
-      }
-    });
-  }
-// The code above is a function that hides empty columns in a table. It checks each column in the table and hides it if all cells in that column are empty. The function is called after the data is fetched and the table is populated.
-
-
-
         $(document).ready(function() {
             const webAppUrl = 'https://script.google.com/macros/s/AKfycby9-laPphroGrCkAsLCIUhM9ZHXhzfB5AB_bW5013Kxi33_epoj47Zd2qKzZM3pxOxryQ/exec';
 
@@ -163,11 +122,17 @@
                             <td>${row['LOCAL-TRANSPORT']}</td>
                             <td>${row['FUNERAL']}</td>
                             <td>${row['CHARITY']}</td>  
+                            <td>${row['POST-OFFICE-BILL']}</td>  
+                            
                             <td>${row['TOTAL']}</td>  
                         `;
                         tableBody.appendChild(tr);
                     });
-                    $('#dataTable').DataTable({
+
+                    // Call function to Hide empty columns function
+                    hideEmptyColumns("dataTable3");// Call the function to hide empty columns
+
+                    $('#dataTable3').DataTable({
                         scrollX: true, // Enable horizontal scrolling
                         scrollY: "60vh", // Enable vertical scrolling with a height of 60% of the viewport
                         scrollCollapse: true, // Allow the table to shrink when fewer rows are displayed
@@ -176,14 +141,11 @@
                             leftColumns: 1, // Freeze the first column (Date_Column)
                             rightColumns: 1 // Freeze the last column (Total)
                         },
-                        // fixedHeader: true, // Enable fixed headers
+                        //fixedHeader: true, // Enable fixed headers
                         order: [[0, "desc"]], // Order by the first column (NUM) in descending order
                         pageLength: 10, // Set the number of rows per page
                         lengthMenu: [5, 10, 25, 50, 100, 200] // Options for number of rows per page
                     });
-
-                    hideEmptyColumns("dataTable");// Call the function to hide empty columns
-
                 })
                 .catch(error => console.error('Error fetching data:', error))
                 .finally(() => {
@@ -192,8 +154,56 @@
                 });
          });
 
+  // The code below is a function that hides empty columns in a table. 
+  // It checks each column in the table and hides it if all cells in that column are empty. 
+  // The function is called after the data is fetched and the table is populated.
+  function hideEmptyColumns(tableId) {
+  const table = document.getElementById(tableId);
+  const headers = table.querySelectorAll("thead th");
+  const rows = table.querySelectorAll("tbody tr");
 
+  if (!table || headers.length === 0 || rows.length === 0) {
+    console.warn(`Table with ID "${tableId}" is empty or not found.`);
+    return;
+  }
+
+  // Iterate through each column
+  headers.forEach((header, colIndex) => {
+    let isEmpty = true;
+
+    // Check if all cells in the column are empty
+    rows.forEach((row) => {
+      const cell = row.cells[colIndex];
+      if (cell && cell.textContent.trim() !== "") {
+        isEmpty = false; // If any cell has content, the column is not empty
+      }
     });
+
+    // Hide the column if it is empty
+    if (isEmpty) {
+      // Hide the header
+      header.style.display = "none";
+
+      // Hide all cells in the column
+      rows.forEach((row) => {
+        const cell = row.cells[colIndex];
+        if (cell) {
+          cell.style.display = "none";
+        }
+      });
+    } else {
+      // Ensure the header and cells are visible if the column is not empty
+      header.style.display = ""; // Make the header visible
+      rows.forEach((row) => {
+        const cell = row.cells[colIndex];
+        if (cell) {
+          cell.style.display = ""; // Make the cell visible
+        }
+      });
+    }
+  });
+}
+
     </script>
 </body>
 </html>
