--- a/church1/local-income-records.html
+++ b/church1/local-income-records.html
@@ -52,7 +52,7 @@
             <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
             <div class="dropdown-content">
               <a href="income-records.html">Income-Records</a>
-              <a href="expenditure-records.html">Expenses-Records</a>
+              <a href="local-expenditure-records.html">Local-Expenditure-Records</a>
               <a class="active" href="local-income-records.html">Local-Income-Records</a>
               <a href="conference-records.html">Conference-Records</a>
               <a href="district-records.html">District-Records</a>
@@ -81,6 +81,8 @@
                         <th>Thanks Giving</th>
                         <th>Children Offering</th>
                         <th>Sabbath School</th>
+                        <th>Fund Raising</th>
+
                         <th>Total</th>
 
                     </tr>
@@ -145,7 +147,7 @@
 
 
         $(document).ready(function() {
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbxfRWuHaQ-lEvopSxkHOTXmeeWYAZ4TCx9NvUi3loXYmMjTfxq-D9VMIZY-KFOxDVNUGQ/exec';
+            const webAppUrl = 'https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec';
 
             // Show spinner
             $('#spinner2').show();
@@ -166,6 +168,7 @@
                             <td>${row['THANKSGIVING']}</td>
                             <td>${row['CHILDREN-OFFERING']}</td>
                             <td>${row['SABBATH-SCHOOL']}</td>
+                            <td>${row['FUND-RAISING']}</td>
                             <td>${row['TOTAL']}</td>  
                         `;
                         tableBody.appendChild(tr);
