--- a/church1/AdminDashBoard/theme/index.html
+++ b/church1/AdminDashBoard/theme/index.html
@@ -21,6 +21,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="../../../church1/assest/scripts/auth.js"></script> 
+    <script src="../../../church1/assest/webAppUrls/weburls.js"></script> 
 
 
 
@@ -330,12 +331,12 @@
 
   // Function to fetch data from Google Apps Script Web App and update the HTML elements
   document.addEventListener("DOMContentLoaded", () => {
-  const IncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec';
-  const ExpenditureWebAppUrl = 'https://script.google.com/macros/s/AKfycby9-laPphroGrCkAsLCIUhM9ZHXhzfB5AB_bW5013Kxi33_epoj47Zd2qKzZM3pxOxryQ/exec';
-  const ConferenceWebAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
-  const DistrictWebAppUrl = 'https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec';
-  //const LocalIncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbxfRWuHaQ-lEvopSxkHOTXmeeWYAZ4TCx9NvUi3loXYmMjTfxq-D9VMIZY-KFOxDVNUGQ/exec';
-  const LocalIncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec';
+  // const IncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec';
+  // const ExpenditureWebAppUrl = 'https://script.google.com/macros/s/AKfycby9-laPphroGrCkAsLCIUhM9ZHXhzfB5AB_bW5013Kxi33_epoj47Zd2qKzZM3pxOxryQ/exec';
+  // const ConferenceWebAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
+  // const DistrictWebAppUrl = 'https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec';
+  // //const LocalIncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbxfRWuHaQ-lEvopSxkHOTXmeeWYAZ4TCx9NvUi3loXYmMjTfxq-D9VMIZY-KFOxDVNUGQ/exec';
+  // const LocalIncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec';
 
   // Show all spinners
   const spinnerTotalIncome = document.getElementById('spinner1');
@@ -354,7 +355,7 @@
   if (spinnerCurrentBalance) spinnerCurrentBalance.style.display = 'block';
   if (spinnerOutstandingBalance) spinnerOutstandingBalance.style.display = 'block';
 
-  // Fetch Income, Expenditure, Conference, District, Local Income data concurrently
+  // Fetch Income, Expenditure, Conference, District, Local Income data concurrently from the webApp URLs
   Promise.all([
     fetch(IncomeWebAppUrl).then(response => {
       if (!response.ok) {
@@ -569,7 +570,7 @@
     });
 
 
-// Function to toggle the visibility of the submenu for Expenditure Records
+// Function to toggle the visibility of the submenu for Expenditure Records Tab
   // This is for the Expenditure Records submenu
   const expensesRecords = document.getElementById("expensesRecords");
   const expensesSubmenu = document.getElementById("expensesSubmenu");
@@ -583,7 +584,6 @@
     });
   }
 
-
     // Function to check authentication and redirect if not authenticated, this is for the dashboard page
     // General one exist for the whole app in auth 
     const checkAuth = () => { 
@@ -595,6 +595,9 @@
 
 
 });
+
+
+
 
     //Just for log out button
    const logOutButton = document.getElementById('log-out');
@@ -620,6 +623,7 @@
         });
     }
 
+    
       // Just for the next page button
       const customButton = document.getElementById('customButton');
       if (customButton) {
