--- a/church1/conference-expenditure-book.html
+++ b/church1/conference-expenditure-book.html
@@ -135,7 +135,8 @@
 
 
     // For the Save Button (Submit button for the form)
-    const scriptURL =  'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';                    
+    // const ConferenceWebAppUrl =  'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec'; 
+    // Reference the web app URL from the external script weburls.js                   
 
     const form = document.forms["incomeTableForm"];
     form.addEventListener("submit", (e) => {
@@ -273,7 +274,7 @@ if (duplicateParticulars.length > 0) {
      const saveButton = document.getElementById("save");
     saveButton.style.display = "none";
   
-      fetch(scriptURL, { method: "POST", body: formData })
+      fetch(ConferenceWebAppUrl, { method: "POST", body: formData })
         .then((response) => {
           // Hide spinner
         spinner.style.display = 'none';
