--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -79,7 +79,7 @@
                 <i class="fa fa-spinner fa-spin"></i> Loading...
             </div>
         <div class="table-wrapper">
-            <table id="dataTable" class="table table-striped table-bordered">
+            <table id="dataTable1" class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>Date_Field</th>
@@ -162,8 +162,11 @@
     <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
     <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
 </footer>
-    <script src="./assest/scripts/script.js">  </script>
 
+
+
+<script src="./assest/scripts/script.js">  </script>
+<script src="./assest/webAppUrls/weburls.js"></script>
 
 <script>
 
@@ -182,15 +185,16 @@
       });
 
 
-
+// First Table (That is the Conference Funds)
 
         $(document).ready(function() {
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
+            // const ConferenceWebAppUrl = 'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';
+            // Reference the web app URL from the external script weburls.js
 
             // Show spinner
             $('#spinner2').show();
 
-            fetch(webAppUrl)
+            fetch(ConferenceWebAppUrl)
                 .then(response => response.json())
                 .then(data => {
                     const tableBody = document.getElementById('tableBody');
@@ -216,7 +220,7 @@
                         `;
                         tableBody.appendChild(tr);
                     });
-                    $('#dataTable').DataTable({
+                    $('#dataTable1').DataTable({
                         searching: false, // Disable the search functionality
                         lengthChange: false, // Remove the "Show entries" dropdown
                         paging: false, // Disable pagination
@@ -234,12 +238,13 @@
 // Second Table (That is the District Funds)
 
         $(document).ready(function() {
-            const webAppUrl2 = 'https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec';
+            // const DistrictWebAppUrl = 'https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec';
+            // Reference the web app URL from the external script weburls.js
 
             // Show spinner
             $('#spinner2').show();
 
-            fetch(webAppUrl2)
+            fetch(DistrictWebAppUrl)
                 .then(response => response.json())
                 .then(data => {
                     const tableBody = document.getElementById('tableBody2');
