--- a/church1/district-expenditure-book.html
+++ b/church1/district-expenditure-book.html
@@ -121,6 +121,7 @@
 
 
     <script src="./assest/scripts/script.js"></script>
+    <script src="./assest/webAppUrls/weburls.js"></script>
 
     <script>
 
@@ -132,10 +133,10 @@
     })
     .catch(error => console.error('Error loading datalist:', error));
 
+    // const DistrictWebAppUrl = 'https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec';
+    // Reference the web app URL from the external script weburls.js
 
     // For the Save Button (Submit button for the form)
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec';
-
     const form = document.forms["incomeTableForm"];
     form.addEventListener("submit", (e) => {
       e.preventDefault();
@@ -272,7 +273,7 @@ if (duplicateParticulars.length > 0) {
      const saveButton = document.getElementById("save");
      saveButton.style.display = "none";
   
-      fetch(scriptURL, { method: "POST", body: formData })
+      fetch(DistrictWebAppUrl, { method: "POST", body: formData })
         .then((response) => {
           // Hide spinner
         spinner.style.display = 'none';
