--- a/church1/income-book.html
+++ b/church1/income-book.html
@@ -126,27 +126,27 @@
 
 
     <script src="./assest/scripts/script.js"></script>
+    <script src="./assest/webAppUrls/weburls.js"></script>
 
    
 
 <script>
 
-  // Dynamically load the datalist from an external file
-  fetch('./assest/datalist/income-datalist.html')
+    // Dynamically load the datalist from an external file
+    fetch('./assest/datalist/income-datalist.html')
     .then(response => response.text())
     .then(data => {
       document.getElementById('datalistContainer').innerHTML = data;
     })
     .catch(error => console.error('Error loading datalist:', error));
 
+    
+    // const IncomeWebAppUrl = "https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec";                     
+    // const ConferenceWebAppUrl ="https://script.google.com/macros/s/AKfycbxCdDlJLrcq3qxlEcOW8oI73OJHXC-E3eOaapWiW4Qj9l6OHY8XO1cSK_oaqOWwx7fu9A/exec";
+    // const DistrictWebAppUrl="https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec";
+    // const LocalIncomeWebAppUrl= "https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec"
 
     // For the Save Button (Submit button for the form Income)
-    const totalIncomeScriptURL = "https://script.google.com/macros/s/AKfycbz6aKEzFGa8ztzvunW_9gYJj3AMsHZkHwyslb8aQzwWKU9_D08q04E85VrB8-0nemuWdQ/exec";                     
-    const conferenceScriptURL ="https://script.google.com/macros/s/AKfycbxCdDlJLrcq3qxlEcOW8oI73OJHXC-E3eOaapWiW4Qj9l6OHY8XO1cSK_oaqOWwx7fu9A/exec";
-    const districtScriptURL="https://script.google.com/macros/s/AKfycbz7UCFcas-OBahG81Gutd1SkzmFncvLgX30m_y43ZAE7uzpwjBANbq_4SZAiU_aWO3R5A/exec";
-    // const localDataScriptURL="https://script.google.com/macros/s/AKfycbxfRWuHaQ-lEvopSxkHOTXmeeWYAZ4TCx9NvUi3loXYmMjTfxq-D9VMIZY-KFOxDVNUGQ/exec";
-    const localIncomeScriptURL= "https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec"
-
     const form = document.forms["incomeTableForm"];
     form.addEventListener("submit", (e) => {
       e.preventDefault();
@@ -358,10 +358,10 @@ const formData = new FormData(form);
 
   // Save all data and redirect after success
   Promise.all([
-    fetch(totalIncomeScriptURL, { method: "POST", body: formData }),
-    fetch(conferenceScriptURL, { method: "POST", body: conferenceData }),
-    fetch(districtScriptURL, { method: "POST", body: districtData }),
-    fetch(localIncomeScriptURL, { method: "POST", body: localData })
+    fetch(IncomeWebAppUrl, { method: "POST", body: formData }),
+    fetch(ConferenceWebAppUrl, { method: "POST", body: conferenceData }),
+    fetch(DistrictWebAppUrl, { method: "POST", body: districtData }),
+    fetch(LocalIncomeWebAppUrl, { method: "POST", body: localData })
   ])
     .then((responses) => {
       // Check if all responses are successful
