--- a/church1/local-expenditure-book.html
+++ b/church1/local-expenditure-book.html
@@ -122,7 +122,8 @@
 <div id="datalistContainer"></div>
 
 
-    <script src="./assest/scripts/script.js"></script>
+<script src="./assest/scripts/script.js"></script>
+<script src="./assest/webAppUrls/weburls.js"></script>
 
 <script>
 
@@ -135,9 +136,11 @@
     .catch(error => console.error('Error loading datalist:', error));
 
 
-    // For the Save Button (Submit button for the form)
-    const scriptURL =  "https://script.google.com/macros/s/AKfycbwfn3QAsi_s8g8pXZs_1j0p4Me3FqFhmdzSW99r2y7SiWiuI77B2oCsubCIKX78bJ01Bw/exec"                      
+   
+    // const ExpenditureWebAppUrl =  "https://script.google.com/macros/s/AKfycbwfn3QAsi_s8g8pXZs_1j0p4Me3FqFhmdzSW99r2y7SiWiuI77B2oCsubCIKX78bJ01Bw/exec"  
+    // Reference the web app URL from the external script weburls.js   
 
+ // For the Save Button (Submit button for the form)
     const form = document.forms["incomeTableForm"];
     form.addEventListener("submit", (e) => {
       e.preventDefault();
@@ -274,7 +277,7 @@ if (duplicateParticulars.length > 0) {
       // Show spinner
     spinner.style.display = 'block';
   
-      fetch(scriptURL, { method: "POST", body: formData })
+      fetch(ExpenditureWebAppUrl, { method: "POST", body: formData })
         .then((response) => {
           // Hide spinner
         spinner.style.display = 'none';
