--- a/church1/local-income-records.html
+++ b/church1/local-income-records.html
@@ -63,14 +63,14 @@
       </nav>
       <br><br>
     <div class="container mt-5">
-        <h2 class="records-header" style="background-color:#8e651a;">TOTAL LOCAL INCOME RECORDS</h2>
+        <h2 class="records-header" style="background-color:#8e651a;"> LOCAL INCOME RECORDS</h2>
         <div class="table-responsive">
             <!-- Spinner -->
             <div id="spinner2" class="spinner2" style="display: none;">
                 <i class="fa fa-spinner fa-spin"></i> Loading...
             </div>
         <div class="table-wrapper">
-            <table id="dataTable" class="table table-striped table-bordered">
+            <table id="dataTable7" class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>Num</th>
@@ -103,56 +103,18 @@
       </footer>
 
     <script src="./assest/scripts/script.js"></script>
+    <script src="./assest/webAppUrls/weburls.js"></script>
+
 
     <script>
-
-  document.addEventListener('DOMContentLoaded', () => {
-  // Function to hide all empty columns in the table
-  function hideEmptyColumns(tableId) {
-    const table = document.getElementById(tableId);
-    const headers = table.querySelectorAll("thead th");
-    const rows = table.querySelectorAll("tbody tr");
-
-    if (!table || headers.length === 0 || rows.length === 0) {
-      console.warn(`Table with ID "${tableId}" is empty or not found.`);
-      return;
-    }
-    // Iterate through each column
-    headers.forEach((header, colIndex) => {
-      let isEmpty = true;
-    // Check if all cells in the column are empty
-      rows.forEach((row) => {
-        const cell = row.cells[colIndex];
-        if (cell && cell.textContent.trim() !== "") {
-          isEmpty = false; // If any cell has content, the column is not empty
-        }
-      });
-      // Hide the column if it is empty
-      if (isEmpty) {
-        // Hide the header
-        header.style.display = "none";
-        // Hide all cells in the column
-        rows.forEach((row) => {
-          const cell = row.cells[colIndex];
-          if (cell) {
-            cell.style.display = "none";
-          }
-        });
-      }
-    });
-  }
-// The code above is a function that hides empty columns in a table. It checks each column in the table and hides it if all cells in that column are empty. The function is called after the data is fetched and the table is populated.
-
-
-
-
         $(document).ready(function() {
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec';
+            // const LocalIncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbwJtMQTFn6sIT2z06yDEBzo39NLYURzkeECRKy6rep9WaTKZOWSCS7Y38bxCa63TBZDnw/exec';
+            // Reference the web app URL from the external script weburls.js
 
             // Show spinner
             $('#spinner2').show();
 
-            fetch(webAppUrl)
+            fetch(LocalIncomeWebAppUrl)
                 .then(response => response.json())
                 .then(data => {
                     const tableBody = document.getElementById('tableBody');
@@ -173,7 +135,11 @@
                         `;
                         tableBody.appendChild(tr);
                     });
-                    $('#dataTable').DataTable({
+
+                    // Hide empty columns function (Function in  external script.js)
+                    hideEmptyColumns("dataTable7");// Call the function to hide empty columns
+
+                    $('#dataTable7').DataTable({
                       scrollX: true, // Enable horizontal scrolling
                         scrollY: "60vh", // Enable vertical scrolling with a height of 60% of the viewport
                         scrollCollapse: true, // Allow the table to shrink when fewer rows are displayed
@@ -186,9 +152,6 @@
                         pageLength: 10, // Set the number of rows per page
                         lengthMenu: [5, 10, 25, 50, 100, 200] // Options for number of rows per page
                     });
-                    
-                    // Hide empty columns function
-                    hideEmptyColumns("dataTable");// Call the function to hide empty columns
                 })
                 .catch(error => console.error('Error fetching data:', error))
                 .finally(() => {
@@ -198,7 +161,6 @@
            });
 
 
-    });
     </script>
 </body>
 </html>
