--- a/church1/local-expenditure-book.html
+++ b/church1/local-expenditure-book.html
@@ -325,7 +325,7 @@ function saveDataToSessionStorage() {
         amount: {
           value: parseFloat(amountInput.value) || 0,
           id: amountInput.id || "", // Save the id
-          name: amountInput.name || "" //  Save the name's as well, which is the datalist values which is the same as the particulars 
+          name: amountInput.name || "", //  Save the name's as well, which is the datalist values which is the same as the particulars 
         }
       });
     }
@@ -373,6 +373,9 @@ function loadDataFromSessionStorage() {
       amountInput.value = rowData.amount.value;
       amountInput.id = rowData.amount.id; // Restore the id
       amountInput.name = rowData.amount.name; // Restore the name
+      amountInput.setAttribute("step", "any"); // Allow decimal numbers
+      amountInput.setAttribute("min", "1"); // Set minimum value to 1
+      amountInput.setAttribute("required", "required");   // Set required attribute
       amountInput.classList.add("amount-input");
       cell3.appendChild(amountInput);
     });
