Arranged the code to make it understandable

--- a/church1/district-records.html
+++ b/church1/district-records.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ash.North SDA Church Treasury</title>
+    <title>Treasury-App</title>
     <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
     <link rel="stylesheet" href="./assest/styles/styles.css" />
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
@@ -98,8 +98,6 @@
     <script src="./assest/scripts/script.js"></script>
     <script src="./assest/webAppUrls/weburls.js"></script>
 
-
-
     <script>
 
         $(document).ready(function() {
@@ -154,8 +152,7 @@
                     $('#spinner2').hide();
                 });
           });
-
-    
+          
     </script>
 </body>
 </html>
