--- a/church1/landing-page.html
+++ b/church1/landing-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ash.North SDA Church Treasury</title>
+    <title>Treasury-App</title>
     <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
     <link rel="stylesheet" href="./assest/styles/landingStyles.css"/>
     <link rel="stylesheet" href="./assest/styles/styles.css" />
