--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Ashaiman North Treasury</title>
+        <title>Treasury-App</title>
         <link rel="icon" type="image/icon" href="./outsideAssest/images/favicon.png">
         <!-- CSS FILES -->     
         <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
@@ -74,7 +74,7 @@
                         </div>
 
                         <div class="col-lg-6 col-12 custom-block-wrap">
-                            <img src="./outsideAssest/indexPageAssets/images/male-wearing-apron-female-white-t-shirt-smiling-broadly-being-glad-clean.png" class="img-fluid">
+                            <img src="./outsideAssest/indexPageAssets/images/fruits.png" class="img-fluid">
 
                             <div class="custom-block d-flex flex-column">
                                 <h6 class="text-white mb-3">For more info <br> Contact us:</h6>
@@ -100,12 +100,9 @@
         <!-- JAVASCRIPT FILES -->
         
         <script src="./outsideAssest/indexPageAssets/js/jquery.min.js"></script>
-        <!-- <script src="js/bootstrap.min.js"></script> -->
         <script src="./outsideAssest/indexPageAssets/js/jquery.backstretch.min.js"></script>
         <script src="./outsideAssest/indexPageAssets/js/counter.js"></script>
         <script src="./outsideAssest/indexPageAssets/js/countdown.js"></script>
-        <!-- <script src="js/init.js"></script> -->
-        <!-- <script src="js/modernizr.js"></script> -->
         <script src="./outsideAssest/indexPageAssets/js/animated-headline.js"></script>
         <script src="./outsideAssest/indexPageAssets/js/custom.js"></script>
 
