--- a/login.html
+++ b/login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ash.North SDA Church Treasury</title>
+    <title>Treasury-App</title>
     <link rel="icon" type="image/icon" href="./outsideAssest/images/favicon.png">
     <link rel="stylesheet" href="./outsideAssest/styles/styles.css">
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- <scrip src="./assest/scripts/auth.js"></scrip> -->
+   
    
 </head>
 <body>
