--- a/church1/denominations.html
+++ b/church1/denominations.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ash.North SDA Church Treasury</title>
+    <title>Treasury-App</title>
     <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
     <link rel="stylesheet" href="./assest/styles/styles.css" />
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
@@ -173,8 +173,6 @@
   <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
 </footer>
 
-
-  
 <script src="./assest/scripts/script.js"></script>
 
     <script>
@@ -191,11 +189,9 @@
         document.getElementById('downloadPdf').style.display = 'block'; // Show the download button again
         document.getElementById('grandTot').style.display = 'block'; // Show the grand total again
         document.getElementById('printGrandTotal').style.display = 'none'; // Hide the grand total after printing
-
       });
     
     </script>
 
-   
   </body>
 </html>
