Show or hide menu, implementation in auth

--- a/church1/denominations.html
+++ b/church1/denominations.html
@@ -24,7 +24,7 @@
           <li class="dropdown">
             <a> <i class="fa-solid fa-bars"></i> Menu</a>
             <div class="dropdown-content">
-              <a class="active" href="income-book.html">Income-Book</a>
+              <a href="income-book.html">Income-Book</a>
               <a href="full-view.html">Full View</a>
 
               <a id="expensesRecords" href="#"> <i class="fa-solid fa-square-caret-down"></i> Expenditure-Book</a>
@@ -35,7 +35,7 @@
                   </div>
               <!-- <a href="expenditure-book.html">Expenditure-Book</a> -->
               <a href="cutoff.html">Cut-Off Sheet</a>
-              <a href="denominations.html">Denominations</a>
+              <a class="active" href="denominations.html">Denominations</a>
               
             </div>
           </li>
