--- a/church1/district-records.html
+++ b/church1/district-records.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a id="dashboard"  href="../church1/AdminDashBoard/theme/index.html"> <i class="fa-solid fa-chart-line"></i> Dashboard</a></li>
           <li class="dropdown">
-            <div id="admin-section" style="display: none;">
+            <div id="admin-section">
                 <a> <i class="fa-solid fa-bars"></i> Menu</a>
                 <div class="dropdown-content">
                   <a href="income-book.html">Income-Book</a>
@@ -152,7 +152,7 @@
                     $('#spinner2').hide();
                 });
           });
-          
+
     </script>
 </body>
 </html>
